clusters/may-chang/utro/assets-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: utro-assets
  namespace: default
  labels:
    app: utro-assets
spec:
  serviceName: utro-assets
  replicas: 1
  selector:
    matchLabels:
      app: utro-assets
  template:
    metadata:
      labels:
        app: utro-assets
    spec:
      containers:
      - name: assets
        image: ghcr.io/inspiration-particle/utro-assets:0.1.136
        ports:
        - containerPort: 9003
          name: api
        - containerPort: 18007
          name: health
        livenessProbe:
          httpGet:
            path: /live
            port: health
          initialDelaySeconds: 60
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /ready
            port: health
          initialDelaySeconds: 60
          periodSeconds: 5
