clusters/may-chang/utro/core-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: utro-core
  namespace: default
  labels:
    app: utro-core
spec:
  serviceName: utro-core
  replicas: 2
  selector:
    matchLabels:
      app: utro-core
  template:
    metadata:
      labels:
        app: utro-core
    spec:
      containers:
      - name: core
        image: ghcr.io/inspiration-particle/utro-core:0.1.136
        ports:
        - containerPort: 9102
          name: api
        - containerPort: 18007
          name: health
        livenessProbe:
          httpGet:
            path: /live
            port: health
          initialDelaySeconds: 60
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /ready
            port: health
          initialDelaySeconds: 60
          periodSeconds: 5
