clusters/may-chang/utro/customer-gateway-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: utro-customer-gateway
  namespace: default
  labels:
    app: utro-customer-gateway
spec:
  serviceName: utro-customer-gateway
  replicas: 2
  selector:
    matchLabels:
      app: utro-customer-gateway
  template:
    metadata:
      labels:
        app: utro-customer-gateway
    spec:
      containers:
      - name: customer-gateway
        image: ghcr.io/inspiration-particle/utro-customer-gateway:0.0.1
        ports:
        - containerPort: 9998
          name: api
        - containerPort: 18008
          name: health
        volumeMounts:
        - name: firebase-creds
          mountPath: /var/secrets/firebase
          readOnly: true
        livenessProbe:
          httpGet:
            path: /live
            port: health
          initialDelaySeconds: 60
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /ready
            port: health
          initialDelaySeconds: 60
          periodSeconds: 5
      volumes:
      - name: firebase-creds
        secret:
          secretName: utro-customer-gateway-firebase-admin
          items:
          - key: credentials.json
            path: credentials.json
