clusters/may-chang/utro/gateway-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: utro-gateway
  namespace: default
  labels:
    app: utro-gateway
spec:
  serviceName: utro-gateway
  replicas: 2
  selector:
    matchLabels:
      app: utro-gateway
  template:
    metadata:
      labels:
        app: utro-gateway
    spec:
      containers:
      - name: gateway
        image: ghcr.io/inspiration-particle/utro-gateway:0.1.137
        ports:
        - containerPort: 9999
          name: api
        - containerPort: 18007
          name: health
        livenessProbe:
          httpGet:
            path: /live
            port: health
          initialDelaySeconds: 60
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /ready
            port: health
          initialDelaySeconds: 60
          periodSeconds: 5
