clusters/may-chang/utro/notification-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: utro-notification
  namespace: default
  labels:
    app: utro-notification
spec:
  serviceName: utro-notification
  replicas: 1
  selector:
    matchLabels:
      app: utro-notification
  template:
    metadata:
      labels:
        app: utro-notification
    spec:
      containers:
      - name: notification
        image: ghcr.io/inspiration-particle/utro-notification:0.1.137
        ports:
        - containerPort: 9002
          name: api
        - containerPort: 18007
          name: health
        livenessProbe:
          httpGet:
            path: /live
            port: health
          initialDelaySeconds: 60
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /ready
            port: health
          initialDelaySeconds: 60
          periodSeconds: 5
