clusters/may-chang/utro/payment-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: utro-payment
  namespace: default
  labels:
    app: utro-payment
spec:
  serviceName: utro-payment
  replicas: 2
  selector:
    matchLabels:
      app: utro-payment
  template:
    metadata:
      labels:
        app: utro-payment
    spec:
      containers:
      - name: payment
        image: ghcr.io/inspiration-particle/utro-payment:0.1.137
        ports:
        - containerPort: 9102
          name: api
        - containerPort: 18007
          name: health
        livenessProbe:
          httpGet:
            path: /live
            port: health
          initialDelaySeconds: 60
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /ready
            port: health
          initialDelaySeconds: 60
          periodSeconds: 5
