clusters/may-chang/utro/ui-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: utro-ui
  namespace: default
  labels:
    app: utro-ui
spec:
  serviceName: utro-ui
  replicas: 2
  selector:
    matchLabels:
      app: utro-ui
  template:
    metadata:
      labels:
        app: utro-ui
    spec:
      containers:
      - name: ui
        image: ghcr.io/inspiration-particle/utro-ui:0.1.136
        ports:
        - containerPort: 3000
          name: http
        livenessProbe:
          httpGet:
            path: /api/health
            port: http
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /api/ready
            port: http
          initialDelaySeconds: 10
          periodSeconds: 5
