clusters/may-chang/utro/assets-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: utro-assets
  namespace: default
spec:
  selector:
    app: utro-assets
  ports:
  - port: 9003
    targetPort: api
    protocol: TCP
    name: api
  - port: 18007
    targetPort: 18007
    protocol: TCP
    name: health
  type: ClusterIP
