clusters/may-chang/utro/customer-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: utro-customer-gateway
  namespace: default
  labels:
    app: utro-customer-gateway
spec:
  type: ClusterIP
  ports:
  - port: 9998
    targetPort: 9998
    protocol: TCP
    name: api
  - port: 18008
    targetPort: 18008
    protocol: TCP
    name: health
  selector:
    app: utro-customer-gateway
