clusters/may-chang/utro/gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: default
  labels:
    app: gateway
spec:
  type: ClusterIP
  ports:
  - port: 9999
    targetPort: 9999
    protocol: TCP
    name: api
  - port: 18007
    targetPort: 18007
    protocol: TCP
    name: health
  selector:
    app: gateway
