clusters/may-chang/utro/notification-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: utro-notification
  namespace: default
spec:
  selector:
    app: utro-notification
  ports:
  - port: 9002
    targetPort: api
    protocol: TCP
    name: api
  - port: 18007
    targetPort: 18007
    protocol: TCP
    name: health
  type: ClusterIP
