clusters/may-chang/utro/ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: utro-ui
  namespace: default
  labels:
    app: utro-ui
spec:
  type: ClusterIP
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: utro-ui
